--- a/aula13/ex/index.html
+++ b/aula13/ex/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./js/script.js"></script>
+
     <title>Exercícios Aula 13</title>
 </head>
 <body>
-    
+    <script>
+        let nome = prompt("Digite seu nome completo: ");
+        document.body.innerHTML += `Seu nome completo é: ${nome}`;
+        document.body.innerHTML += `<br>Seu nome completo tem ${nome.length} letras`;
+        document.body.innerHTML +=`<br>A segunda letra do seu nome é: ${nome.slice(1,2)}`;
+        
+    </script>
 </body>
 </html>
