--- a/aula13/ex/index.html
+++ b/aula13/ex/index.html
@@ -13,10 +13,10 @@
         document.body.innerHTML += `Seu nome completo é: <strong>${nome}</strong>`;
         document.body.innerHTML += `<br> Seu nome completo tem <strong>${nome.length}</strong> letras`;
         document.body.innerHTML += `<br> A segunda letra do seu nome é: <strong>${nome.slice(1,2)}</strong>`;
-        document.body.innerHTML += `<br> O primeiro índice da letra 'a' do seu nome é: <strong>${nome.indexOf("a", 0)}</strong>`;
-        document.body.innerHTML += `<br> O último índice da letra 'a' do seu nome é: <strong>${nome.lastIndexOf("a", 0)}</strong>`;
-        document.body.innerHTML += `<br> As últimas 3 letras do seu nome são: <strong>${nome.slice(nome.length(-1))}</strong>`;
-        document.body.innerHTML += `<br> As palavras do seu nome são: <strong>${nome.split(" ")}</strong>`;
+        document.body.innerHTML += `<br> O primeiro índice da letra 'a' do seu nome é: <strong>${nome.indexOf("a")}</strong>`;
+        document.body.innerHTML += `<br> O último índice da letra 'a' do seu nome é: <strong>${nome.lastIndexOf("a")}</strong>`;
+        document.body.innerHTML += `<br> As últimas 3 letras do seu nome são: <strong>${nome.slice(-3, nome.length)}</strong>`; //pega o tamanho da string -3.
+        document.body.innerHTML += `<br> As palavras do seu nome são: <strong>${nome.split(' ')}</strong>`;
         document.body.innerHTML += `<br> Seu nome com letras maiúsculas: <strong>${nome.toUpperCase()}</strong>`;
         document.body.innerHTML += `<br> Seu nome com letras minúsculas: <strong>${nome.toLowerCase()}</strong>`;
     </script>
